--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=your-telegram-bot-token-here
+BOT_TOKEN=8389009323:AAHQ9oMOkOdhqgEFM1p5pB3V0napGLddCXE
 TG_CONNECT_TIMEOUT=10
 TG_READ_TIMEOUT=20
 TG_WRITE_TIMEOUT=20
