--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,41 @@
+# Telegram Bot Framework
 python-telegram-bot==20.7
+
+# Scheduler for auto-backup/events
 APScheduler==3.10.4
+
+# HTTP client (PTB dependency)
 httpx==0.25.2
+
+# Environment variable loader
 python-dotenv==1.0.1
+
+# Fast JSON utilities
 ujson==5.9.0
+
+# Logging enhancements
 loguru==0.7.2
+
+# Timezone utilities
 pytz==2024.1
+
+# Requests (if used directly)
 requests==2.32.3
+
+# Web framework (optional for webhook mode)
 flask==2.2.5
+
+# Translation support
 deep-translator==1.11.4
+
+# Asyncio patching (useful in notebooks/embedded loops)
 nest-asyncio==1.5.6
+
+# Database ORM
 SQLAlchemy==2.0.25
+
+# Async SQLite driver
 aiosqlite==0.19.0
+
+# Error monitoring
 sentry-sdk==1.40.0
